syntax = "proto3";

package product;
option go_package = "/product/productpb";

service ProductService {
  rpc AddProduct(CreateProductRequest) returns (Product) {}
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc ListProducts(Empty) returns (stream Product) {}
  rpc DeleteProduct(DeleteProductRequest) returns (Empty) {}
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message GetProductRequest {
  string product_id = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message Empty {}